--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="<%= BASE_URL %>assets/css/main.css" />
+	<noscript><link rel="stylesheet" href="<%= BASE_URL %>assets/css/noscript.css" /></noscript>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>treyner-net</title>
   </head>
-  <body>
+	<body class="is-preload">
+
     <noscript>
       <strong>We're sorry but treyner-net doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+
+		<!-- Sidebar -->
+
+		<!-- Wrapper -->
+		<!-- Scripts -->
+			<script src="<%= BASE_URL %>assets/js/jquery.min.js"></script>
+			<script src="<%= BASE_URL %>assets/js/jquery.scrollex.min.js"></script>
+			<script src="<%= BASE_URL %>assets/js/jquery.scrolly.min.js"></script>
+			<script src="<%= BASE_URL %>assets/js/browser.min.js"></script>
+			<script src="<%= BASE_URL %>assets/js/breakpoints.min.js"></script>
+			<script src="<%= BASE_URL %>assets/js/util.js"></script>
+			<script src="<%= BASE_URL %>assets/js/main.js"></script>
+
+	</body>
 </html>
